# falafel

./: Cargo.toml  Dockerfile  Jenkinsfile  README.md
src/: amqp_client.rs  amqp_wrappers.rs  lib.rs
tests/: internal.rs
