[package]
name = "falafel"
version = "0.0.0"
edition = "2021"
authors = ["Alon alon.harmon1@gmail.com"]
description = "infrastructure and utils for microservices written in rust"
license = "CDDL-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
