[package]
name = "falafel"
version = "0.0.0amqp-suppurt"
edition = "2021"
authors = ["Alon alon.harmon1@gmail.com"]
description = "infrastructure and utils for microservices written in rust"
license = "CDDL-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = { version = "0.4", default-features = false }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = "0.9.0"
